# journey_dynamics

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yaml
crates/cqrs-es-crypto/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cqrs-es-crypto-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/cqrs-es-crypto-derive/src/: lib.rs  model.rs  parse.rs
crates/cqrs-es-crypto-derive/tests/: integration.rs
crates/cqrs-es-crypto/src/: caching_key_store.rs  cipher.rs  kek.rs  key_store.rs  lib.rs  repository.rs  rewrap.rs
crates/cqrs-es-crypto/src/kek/: composite.rs  gcp.rs  mod.rs
crates/cqrs-es-crypto/tests/: postgres_key_store.rs  postgres_repository.rs
crates/es-capture/: CHANGELOG.md  Cargo.toml  README.md
crates/es-capture/src/: aggregate.rs  attribute_schema.rs  attributes_set_codec.rs  capture.rs  decision_engine.rs  lib.rs  subject_registry.rs
crates/journey_dynamics/: Cargo.toml  build.rs
crates/journey_dynamics/examples/: capture_person.rs
crates/journey_dynamics/src/: command_extractor.rs  config.rs  lib.rs  main.rs  pii_codec.rs  queries.rs  route_handler.rs  state.rs  subject_lookup_hook.rs  view_repository.rs
crates/journey_dynamics/src/crypto/: cipher.rs  key_store.rs  mod.rs  repository.rs  subject_mapping.rs
crates/journey_dynamics/src/domain/: attribute_path.rs  attribute_schema.rs  commands.rs  events.rs  journey.rs  json_path.rs  mod.rs
crates/journey_dynamics/src/services/: decision_engine.rs  mod.rs  schema_validator.rs
crates/journey_dynamics/src/utils/: data_merger.rs  mod.rs  schema_data_handler.rs
crates/journey_dynamics/tests/: postgres_subject_lookup_hook.rs  postgres_view_repository.rs
db/: init.sql
docs/: ARCHITECTURE_REVIEW.md  CAPTURE_SUBJECT_DESIGN.md  CAPTURE_SUBJECT_IMPLEMENTATION_PLAN.md  CQRS_ES_CRYPTO_PARTITIONS_ADR.md  CRYPTO_CRATE_EXTRACTION.md  CRYPTO_SHREDDING_DESIGN.md  IMPLEMENTATION_SUMMARY.md  KEK_ROTATION_DESIGN.md  KEK_ROTATION_RUNBOOK.md  MULTI_SUBJECT_DESIGN.md  NAIVE_DATE_REDACTION_DESIGN.md  PATH_KEYED_ATTRIBUTES_DESIGN.md  PATH_KEYED_ATTRIBUTES_MIGRATION_GUIDE.md  PATH_KEYED_ATTRIBUTES_PLAN.md  PERSON_CAPTURE.md  PII_CODEC_DERIVE_MACRO.md  QUICK_START.md  REUSABLE_ES_FOUNDATION.md  SUBJECT_ID_STRATEGIES.md  SUBJECT_LOOKUP_SPLIT_PLAN.md
examples/: capture_person.rs
examples/flight-booking/: Cargo.toml  Justfile  SCHEMA_USAGE.md  flight-booking-journey.md  journey-orchestrator-example.ts  journey-orchestrator-implementation.ts
examples/flight-booking/jdm-models/: README.md  flight-booking-orchestrator.jdm.json  flight-error-handling.jdm.json  flight-pricing-calculator.jdm.json  flight-validation-rules.jdm.json  test-demo.js
examples/flight-booking/jdm-models/schemas/: flight-booking.json
examples/flight-booking/schemas/: attribute-schema.json  flight-booking-schema.json
examples/flight-booking/src/: flight_booking_data.rs  lib.rs  tests.rs
examples/hr/: Cargo.toml  README.md
examples/hr/src/: lib.rs  main.rs  tests.rs
migrations/: 20251218151839_init.down.sql  20251218151839_init.up.sql  20260422085557_add_crypto_shredding.down.sql  20260422085557_add_crypto_shredding.up.sql  20260423132137_init.down.sql  20260423132137_init.up.sql  20260515132849_kek_versioning.down.sql  20260515132849_kek_versioning.up.sql  20260517134446_subject_lookup.down.sql  20260517134446_subject_lookup.up.sql  20260526000001_workflow_phase.down.sql  20260526000001_workflow_phase.up.sql  20260527000001_attributes_set_index.down.sql  20260527000001_attributes_set_index.up.sql  20260606000001_subject_registration.down.sql  20260606000001_subject_registration.up.sql  20260607000001_drop_legacy_view_columns.down.sql  20260607000001_drop_legacy_view_columns.up.sql
src/: command_extractor.rs  config.rs  lib.rs  main.rs  queries.rs  route_handler.rs  state.rs  view_repository.rs
src/domain/: commands.rs  events.rs  journey.rs  mod.rs
src/domain/journey/: flight_tests.rs
src/queries/: mod.rs  workflow_saga.rs
src/services/: decision_engine.rs  mod.rs  schema_validator.rs
src/utils/: data_merger.rs
tests/: 01-create-journey.hurl  02-capture-data.hurl  03-capture-person.hurl  04-query-journey.hurl  05-complete-journey.hurl  README.md  error-cases.hurl  full-flight-booking.hurl  full-flight-booking_with_path_bags.hurl  full-flight-booking_with_shredding.hurl  full-flight-booking_with_shredding_by_email.hurl
