[package]
name = "journey_dynamics"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.7"
chrono = "0.4.42"
cqrs-es = "0.4.12"
dotenv = "0.15.0"
postgres-es = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sqlx = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
zen-engine = "0.52.2"
