[package]
name         = "cqrs-es-crypto-derive"
version      = "0.1.0"
edition      .workspace = true
license      .workspace = true
repository   .workspace = true
authors      .workspace = true
rust-version .workspace = true
description  = "Derive macro for cqrs-es-crypto — generates PiiEventCodec implementations"
readme       = "README.md"
keywords     = ["cqrs", "event-sourcing", "gdpr", "pii", "derive"]
categories   = ["cryptography"]

[lib]
proc-macro = true
doctest    = false

[dependencies]
zyn = { version = "0.5", features = ["derive"] }

[dev-dependencies]
# cqrs-es-crypto without the `derive` feature to avoid a circular dependency
# (cqrs-es-crypto optionally depends on this crate via its `derive` feature).
base64          = "0.22"
cqrs-es-crypto  = { path = "../cqrs-es-crypto", features = ["testing"] }
cqrs-es         = "0.5.0"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1", features = ["v4"] }
tokio           = { version = "1", features = ["macros", "rt-multi-thread"] }
