[package]
name = "cqrs-es-crypto"
version = "0.1.0"
edition.workspace = true

[features]
testing = []
derive  = ["dep:cqrs-es-crypto-derive"]

[dependencies]
cqrs-es-crypto-derive = { path = "../cqrs-es-crypto-derive", optional = true }
aes-gcm      = "0.10"
aes-kw       = "0.3"
async-trait  = "0.1"
base64       = "0.22"
cqrs-es      = "0.5.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
sqlx         = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
thiserror    = "2.0"
uuid         = { version = "1", features = ["serde", "v4"] }
zeroize      = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
