[package]
name = "es-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Reusable progressive-capture spine for event-sourced, crypto-shredded domains"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonptr = { version = "0.7.1", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0"
