[package]
name = "es-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Reusable progressive-capture spine for event-sourced, crypto-shredded domains"
publish = false

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonptr = { version = "0.7.1", features = ["serde"] }
json-patch = "4.2.0"
jsonschema = "0.46"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["serde", "v4"] }
zen-engine = "0.55.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
