[package]
name = "journey_dynamics"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
cqrs-es-crypto = { path = "../cqrs-es-crypto" }
axum = "0.8.9"
chrono = "0.4.44"
cqrs-es = "0.5.0"
dotenv = "0.15.0"
json-patch = "4.1.0"
postgres-es = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
jsonschema = "0.46"
sqlx = { version = "0.8.6", features = [
    "json",
    "migrate",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
zen-engine = "0.55.0"

[dev-dependencies]
cqrs-es-crypto = { path = "../cqrs-es-crypto", features = ["testing"] }
