[package]
name = "flight-booking"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
journey_dynamics = { path = "../../crates/journey_dynamics" }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
cqrs-es = "0.4.12"

[build-dependencies]
serde_json = "1.0"
