[package]
name = "flight-booking"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
journey_dynamics = { path = "../../crates/journey_dynamics" }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
cqrs-es = "0.5.0"

[build-dependencies]
serde_json = "1.0"
